<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.fturleque</groupId>
    <artifactId>morpheus-engine</artifactId>
    <version>1.2.1</version>
    <packaging>pom</packaging>

    <name>MORPHEUS</name>
    <description>Specification &amp; Intent Intelligence Engine</description>

    <modules>
        <module>morpheus-domain</module>
        <module>morpheus-application</module>
        <module>morpheus-provider-sdk</module>
        <module>morpheus-provider-testkit</module>
        <module>morpheus-provider-reference</module>
        <module>morpheus-provider-openspec</module>
        <module>morpheus-provider-markdown</module>
        <module>morpheus-provider-synthetic</module>
        <module>morpheus-store-memory</module>
        <module>morpheus-store-sqlite</module>
        <module>morpheus-mcp-transport</module>
        <module>morpheus-integration-minos</module>
        <module>morpheus-integration-nexus</module>
        <module>morpheus-mcp</module>
        <module>morpheus-api</module>
        <module>morpheus-cli</module>
        <module>morpheus-architecture-tests</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.outputTimestamp>2026-01-01T00:00:00Z</project.build.outputTimestamp>
        <maven.compiler.release>21</maven.compiler.release>

        <junit.version>6.1.3</junit.version>
        <archunit.version>1.5.0</archunit.version>
        <sqlite-jdbc.version>3.53.2.0</sqlite-jdbc.version>
        <mcp-sdk.version>2.0.1</mcp-sdk.version>
        <reactor-bom.version>2024.0.0</reactor-bom.version>
        <slf4j.version>2.0.18</slf4j.version>
        <jackson.version>3.2.2</jackson.version>

        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.6</maven.surefire.plugin.version>
        <maven.enforcer.plugin.version>3.6.3</maven.enforcer.plugin.version>
        <maven.jar.plugin.version>3.5.1</maven.jar.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
        <maven.dependency.plugin.version>3.11.0</maven.dependency.plugin.version>
        <jacoco.version>0.8.15</jacoco.version>
        <cyclonedx.maven.plugin.version>2.9.3</cyclonedx.maven.plugin.version>
        <dependency-check.maven.plugin.version>12.2.2</dependency-check.maven.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp-bom</artifactId>
                <version>${mcp-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- MCP SDK 2.0.1 is built on the Reactor 2024.0.x/3.7.x line. Keep the transport on that compatible train. -->
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-bom</artifactId>
                <version>${reactor-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Align the API used transitively by MCP/networknt with the runtime SLF4J backend packaged by the CLI. -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <systemPropertyVariables>
                            <morpheus.project.version>${project.version}</morpheus.project.version>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-foundation</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.16,4.0.0)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[21,22)</version>
                                </requireJavaVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven.dependency.plugin.version}</version>
                <executions>
                    <execution>
                        <id>d2-dependency-hygiene</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.cyclonedx</groupId>
                <artifactId>cyclonedx-maven-plugin</artifactId>
                <version>${cyclonedx.maven.plugin.version}</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>m21-aggregate-sbom</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>makeAggregateBom</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/m21-supply-chain</outputDirectory>
                            <outputName>morpheus-sbom</outputName>
                            <outputFormat>all</outputFormat>
                            <schemaVersion>1.6</schemaVersion>
                            <includeBomSerialNumber>false</includeBomSerialNumber>
                            <includeTestScope>false</includeTestScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>d2-security</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>${dependency-check.maven.plugin.version}</version>
                        <inherited>false</inherited>
                        <configuration>
                            <format>ALL</format>
                            <failBuildOnCVSS>7.0</failBuildOnCVSS>
                            <failOnError>true</failOnError>
                            <failBuildOnUnusedSuppressionRule>true</failBuildOnUnusedSuppressionRule>
                            <skipTestScope>true</skipTestScope>
                            <prettyPrint>true</prettyPrint>
                            <suppressionFiles>
                                <suppressionFile>${maven.multiModuleProjectDirectory}/config/dependency-check-suppressions.xml</suppressionFile>
                            </suppressionFiles>
                            <outputDirectory>${project.build.directory}/d2-security</outputDirectory>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>